migrated hardcoded data to graphCMS platform by consuming a private graphql api

--- a/src/components/quiz/quiz.scss
+++ b/src/components/quiz/quiz.scss
@@ -15,8 +15,9 @@
     width: 100%;
 
     .quiz-image {
-      background: url("../../Assets/20201114_114927.jpg") no-repeat top
-        center/cover;
+      background-repeat: no-repeat;
+      background-position: top;
+      background-size: cover;
       width: 88vw;
       height: 234px;
     }
