--- a/src/components/banner/banner_content.scss
+++ b/src/components/banner/banner_content.scss
@@ -56,7 +56,7 @@
 
   &-image {
     position: relative;
-    background: url("../../Assets/20201114_115411.jpg") no-repeat;
+    background-repeat: no-repeat;
     background-size: 100% auto;
     width: 100%;
     height: 100%;
