--- a/src/components/quiz/quiz.scss
+++ b/src/components/quiz/quiz.scss
@@ -4,7 +4,7 @@
   position: relative;
   display: grid;
   width: 100%;
-  height: 35rem;
+  height: auto;
 
   & > #quiz-content {
     // position: relative;
@@ -57,7 +57,7 @@
   // ABOUT PAGE
   &.aboutP {
     width: 100%;
-    height: 165vh;
+    // height: 165vh;
 
     & > #quiz-content {
       .quiz-image {
@@ -71,6 +71,7 @@
         justify-content: space-evenly;
         width: 100vw;
         height: 60%;
+        padding: 1rem 2rem 0;
         background-color: $body-color;
 
         h3 {
@@ -90,9 +91,18 @@
 
 // RESPONSIVE
 
+@media (max-width: 590px) and (min-height: 605px) {
+  .quiz.aboutP {
+    // height: 80vh;
+    & > #quiz-content {
+      height: 100%;
+    }
+  }
+}
+
 @include tab-sm {
   .quiz {
-    height: 15rem;
+    // height: 15rem;
 
     & > #quiz-content {
       display: grid;
@@ -142,7 +152,7 @@
     // ABOUT PAGE
     &.aboutP {
       width: 100%;
-      height: 48vw;
+      // height: 48vw;
       margin: 0;
 
       & > #quiz-content {
