--- a/src/components/aboutFiller/abtFiller.scss
+++ b/src/components/aboutFiller/abtFiller.scss
@@ -1,39 +1,39 @@
-@import '../../styles/config';
+@import "../../styles/config";
 
-.abtfiller-text{
-  
+.abtfiller-text {
   display: flex;
   flex-flow: column;
   align-items: center;
   justify-content: center;
   width: 100%;
   height: 100%;
-   overflow: hidden;
+  overflow: hidden;
   top: 5%;
   text-align: center;
-  background-color: $menu-text;
+  background-color: $quiz-color;
 
-   h3, p, #aboutBtn{
-   margin: 17px .9rem;
-   align-self: center;
-  
+  h3,
+  p,
+  #aboutBtn {
+    margin: 17px 0.9rem;
+    align-self: center;
   }
 
-   h3{
-   font-size: 8vmin;
-   }
+  h3 {
+    font-size: 5.8vmin;
+  }
 
-  p{
+  p {
     text-align: center;
     max-width: 500px;
     font-size: 3vmin;
   }
 
-  #aboutBtn{
+  #aboutBtn {
     @include btn;
 
-  &:hover{
-    @include btnHover;
+    &:hover {
+      @include btnHover;
+    }
   }
-  }
- }
+}
