--- a/src/components/banner/banner_content.scss
+++ b/src/components/banner/banner_content.scss
@@ -67,6 +67,11 @@
     min-height: 350px;
   }
 
+  .banner-text {
+    justify-self: center;
+    align-self: center;
+  }
+
   & > * {
     color: black;
     padding: 1rem;
@@ -83,10 +88,16 @@
   h3 {
     overflow: hidden;
   }
-
+  .banner-btn-wrapper {
+    // margin: 0 0 3rem 0;
+    overflow-wrap: break-word;
+  }
   #banner-btn {
     @include btn;
-    margin: 0.5rem;
+    margin: 0.9rem;
+    padding: 0.3rem;
+    width: 200px;
+    overflow-wrap: break-word;
 
     &:hover {
       @include btnHover;
@@ -99,7 +110,7 @@
 @include phone-md {
   .banner {
     #banner-btn {
-      width: 275px;
+      width: 230px;
       height: 50px;
     }
   }
