--- a/src/styles/_config.scss
+++ b/src/styles/_config.scss
@@ -216,148 +216,59 @@ $font-weights: (
   will-change: transform;
 }
 
+@include mobile-menu {
+  .script-bf-box {
+    width: 45px;
+    height: 12rem;
+  }
+}
+
 // Error Page
 
-@import url("https://fonts.googleapis.com/css2?family=Fontdiner+Swanky&family=Roboto:wght@500&display=swap");
-
-$lime: #c5dc50;
-$rasp: #f36a6f;
-$seed: #383838;
-$sm: 1rem;
-$md: 2.5rem;
-$lg: 4rem;
-$mb-sm: 0.8rem;
-$mb-md: 1.5rem;
-$mb-lg: 2rem;
-
 .error-page {
-  display: flex;
-  align-items: center;
-  height: 100vh;
-  max-width: 1000px;
-  width: calc(100% - #{$lg});
-  margin: 0 auto;
-  cursor: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/4424790/cursors-edge.png"),
-    auto;
-  background: linear-gradient(to right, white 50%, $seed 50%);
-  font-family: "Roboto", sans-serif;
-  font-size: 18px;
-  font-weight: 500;
-  line-height: 1.5;
-  color: white;
-  box-sizing: 0;
-  padding: 0;
-  caret-color: $accent-color1;
-  > * {
-    display: flex;
-    flex-flow: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    max-width: 500px;
-    width: 100%;
-    padding: $md;
+  background-color: #141019;
+  background: radial-gradient(at 50% -20%, #908392, #0d060e) fixed;
+}
+
+#handboy {
+  animation: swing ease-in-out 1.3s infinite alternate;
+  transform-origin: 98% 98%;
+  transform-box: fill-box;
+}
+
+#girllight {
+  animation: swing ease-in-out 1.3s infinite alternate;
+  transform-origin: 0% 97%;
+  transform-box: fill-box;
+}
+
+#hairgirl {
+  animation: swinghair ease-in-out 1.3s infinite alternate;
+  transform-origin: 60% 0%;
+  transform-box: fill-box;
+}
+
+#zero {
+  transform-origin: bottom;
+  transform-box: fill-box;
+}
+
+/*************swing************/
+@keyframes swing {
+  0% {
+    transform: rotate(10deg);
+  }
+  100% {
+    transform: rotate(-10deg);
   }
 }
 
-#error-img-container {
-  background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/4424790/right-edges.png");
-  background-position: top right;
-  background-repeat: no-repeat;
-  background-size: 25px 100%;
-  #error-img {
-    display: block;
-    height: auto;
-    width: 100%;
+/*************swing hair************/
+@keyframes swinghair {
+  0% {
+    transform: rotate(6deg);
   }
-}
-
-#error-content {
-  text-align: center;
-  #error-title {
-    font-family: "Fontdiner Swanky", cursive;
-    font-size: $lg;
-    color: $lime;
-    margin-bottom: $sm;
-    padding: 10px;
-  }
-  #error-desc {
-    margin-bottom: $md;
-    em {
-      font-style: italic;
-      color: $lime;
-    }
-  }
-  #error-btn {
-    font-family: "Fontdiner Swanky", cursive;
-    font-size: $sm;
-    color: $seed;
-    border: none;
-    background-color: $rasp;
-    padding: $sm $md;
-    transform: skew(-5deg);
-    transition: all 0.1s ease;
-    cursor: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/4424790/cursors-eye.png"),
-      auto;
-    &:hover {
-      background-color: $lime;
-      transform: scale(1.15);
-    }
-  }
-}
-
-@media (max-width: 700px) {
-  .error-page {
-    flex-flow: column;
-    background: $seed;
-    font-size: 16px;
-    > * {
-      max-width: 700px;
-      height: 100%;
-    }
-  }
-  #error-img-container {
-    background-image: none;
-    background-color: white;
-    #error-img {
-      max-width: 300px;
-    }
-  }
-  #error-content {
-    text-align: center;
-    flex-flow: column;
-    justify-content: space-between;
-    height: 100%;
-    #error-title {
-      font-family: "Fontdiner Swanky", cursive;
-      font-size: $mb-lg;
-      color: $lime;
-      // margin-bottom: $sm;
-      // padding: 10px;
-    }
-    #error-desc {
-      font-size: $mb-sm;
-      margin-bottom: $mb-sm;
-      em {
-        font-style: italic;
-        color: $lime;
-      }
-    }
-    #error-btn {
-      font-family: "Fontdiner Swanky", cursive;
-      font-size: $sm;
-      color: $seed;
-      border: none;
-      background-color: $rasp;
-      padding: $sm $sm;
-      transform: skew(-5deg);
-      transition: all 0.1s ease;
-      cursor: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/4424790/cursors-eye.png"),
-        auto;
-      &:hover {
-        background-color: $lime;
-        transform: scale(1.05);
-      }
-    }
+  100% {
+    transform: rotate(-6deg);
   }
 }
