resized error page

--- a/src/styles/_config.scss
+++ b/src/styles/_config.scss
@@ -226,8 +226,12 @@ $font-weights: (
 // Error Page
 
 .error-page {
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
   background-color: #141019;
   background: radial-gradient(at 50% -20%, #908392, #0d060e) fixed;
+  height: 100vh;
 }
 
 #handboy {
